--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@import "../variables";
 
 .header {
   border-bottom: 1px solid $gray-line;
@@ -8,6 +8,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+
+  @media (max-width: 645px) {
+    .container {
+      flex-direction: column;
+    }
+
+    .header__logo {
+      margin-bottom: 20px;
+    }
   }
 
   &__logo {
